---------------------------------------------------------------------------------------------------
Version: 0.2.0
Date: 1/5/25
  Bugfixes:
    - Changed hex core icon from [img=entity.steel-chest] to [img=entity.hex-core]
    - Removed pistols from trade item rolls because they cannot be crafted.
  Changes:
    - The trade overview and catalog are now locked behind the first two quests (which serve as a tutorial).
    - Cleaned up the intro messages (made fewer) and added starter chart tags for Discord server.
  Major Features:
    - Implemented the questbook and some quests.
---------------------------------------------------------------------------------------------------
Version: 0.1.5
Date: 29/4/25
  Bugfixes:
    - Fixed that currently existing hex cores were not sometimes getting new trades upon ranking up items to bronze rank.
    - Fixed that deleting a core was free.
  Features:
    - Added more loaders per hex core.
    - Added ability to configure unloader filters directly for each hex core.
    - Added sink mode for hex cores.
    - Added generator mode for hex cores.
    - Added supercharge operation for hex cores.
---------------------------------------------------------------------------------------------------
Version: 0.1.4
Date: 29/4/25
  Bugfixes:
    - Fixed crash when clicking on a hex core with crude oil.
---------------------------------------------------------------------------------------------------
Version: 0.1.3
Date: 28/4/25
  Features:
    - Mousing over the arrow in a trade shows helpful info.
  Major Features:
    - Added trade productivity.
  Minor Features:
    - Added and improved some commands.
  Changes:
    - Changed biter egg value.
    - Changed bronze rank bonus effect to affect trade productivity.
    - Changed starter trades.
  Gui:
    - Cleaned up the catalog.
    - Made catalog texts more concise.
  Bugfixes:
    - Fixed rounding of item stack value calculation.